tests/negative/Internal/IdenFunctionArgsNoExplicit.juvix
module IdenFunctionArgsNoExplicit;

open import Stdlib.Prelude;

f : {A : Type} → Nat;
f := zero;

main : Nat;
main := f;

end;
